# tower-defense-rust

./: README.md
rust/: Cargo.toml
rust/desktop/: Cargo.toml
rust/desktop/src/: main.rs
rust/desktop/src/opengl_renderer/: renderer.rs
rust/game/: Cargo.toml
rust/game/src/: entities.rs  game.rs  game_commands.rs  lib.rs  map.rs  pathfinding.rs  projectile.rs  tower.rs  tower_builder.rs  wave.rs
rust/game/src/core/: config.rs  mod.rs  position.rs  visual.rs
rust/wasm/: Cargo.toml  package.json
rust/wasm/js/: index.js
rust/wasm/src/: lib.rs  renderer.rs
rust/wasm/static/: index.html
