[package]
name = "desktop"
version = "0.1.0"
authors = ["Daniel Kmak <neverkuzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "ttf", "gfx"]