[package]
name = "game"
version = "0.1.0"
authors = ["Daniel Kmak <neverkuzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
strum = "0.20"
strum_macros = "0.20"