[package]
name = "wasm"
version = "0.1.0"
authors = ["Daniel Kmak <neverkuzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.20"
game = { path = "../game" }
futures = "0.3.12"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  'ImageData',
  'CanvasRenderingContext2d',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'EventListener',
  'KeyboardEvent',
  'MouseEvent',
  'Performance',
  'PerformanceTiming'
]